--- a/public/css/beranda.css
+++ b/public/css/beranda.css
@@ -17,8 +17,24 @@ h2{
     text-align: center;
 }
 
-.guru{
-    width: 100%;
-    background-color: bisque;
-    
+.box1{
+    margin-top: 20px;
+    margin-bottom: 50px;
+    margin-left: 20px;
+    margin-right: 1200px;
+    background-color: red;
+    float: left;
+}
+
+.box2{
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: 50px;
+    margin-right: 1200px;
+    background-color: red;
+    float: left;
+}
+
+.clear{
+    clear:both;
 }
