--- a/public/css/beranda.css
+++ b/public/css/beranda.css
@@ -44,3 +44,8 @@ h3{
     background-color: bisque;
     text-align: center;
 }
+
+.jurusan{
+    margin: 20px 15px;
+    background-color: bisque;
+}
