--- a/public/css/beranda.css
+++ b/public/css/beranda.css
@@ -25,7 +25,10 @@ h3{
 }
 
 .box{
-    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
     background-color: aquamarine;
 }
 
